--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Useless Bot</title>
+  <title>Useless Bot Title</title>
    <link rel="stylesheet" href="style.css">
   <style> p { font-size:120%; } </style>
 </head>
